<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Login fragment-->
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="email_text">Email Address:</string>
    <string name="password_text">Password:</string>
    <string name="login_label">Shoe Store</string>

    <!-- Welcome fragment -->
    <string name="welcome_text">Welcome</string>
    <string name="welcome_description_text">
        In this app you can view an inventory of your shoes, add, update, and remove shoes from that inventory.
    </string>
    <string name="welcome_label">Welcome</string>

    <!-- Instructions fragment -->
    <string name="instructions_text">Instructions</string>
    <string name="instructions_description_text">
        Click "View Shoes" to see your shoe inventory.
        From the shoe list page you can add shoes.
        Include the name of the shoe, its size, the brand,
        and give it a description. Then Save the shoe to see it in your inventory.
    </string>
    <string name="view_shoes_button_text">View Shoes</string>
    <string name="instructions_label">Instructions</string>

    <!-- Shoe List fragment -->
    <string name="view_shoe_button_text">View Shoe</string>
    <string name="shoe_list_label">View shoes</string>

    <!-- Shoe detail fragment -->
    <string name="save_changes_button_text">Save Shoe</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="shoe_name_text">Name of shoe</string>
    <string name="shoe_size_text">Size</string>
    <string name="shoe_brand_text">Brand</string>
    <string name="shoe_description_text">Description</string>
    <string name="add_images_button_text">Add Images</string>
    <string name="instructions_button_text">Instructions</string>
    <string name="logout_menu_item">Logout</string>
    <string name="shoe_detail_label">View shoe</string>
</resources>
