<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:label="@string/login_label"
        android:name="com.udacity.shoestore.views.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:label="@string/welcome_label"
        android:name="com.udacity.shoestore.views.WelcomeFragment"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:label="@string/instructions_label"
        android:name="com.udacity.shoestore.views.InstructionsFragment"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:label="@string/shoe_list_label"
        android:name="com.udacity.shoestore.views.ShoeListFragment"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:popUpTo="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:label="@string/shoe_detail_label"
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.views.ShoeDetailFragment"
        tools:layout="@layout/fragment_shoe_detail"/>
</navigation>