<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.shoestore.shoe.ShoeDetailFragment">

<!--        <LinearLayout-->
<!--            android:id="@+id/shoeImagesLayout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/shoeNameTextInputLayout"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <ImageView-->
<!--                android:id="@+id/shoeImages"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:srcCompat="@android:drawable/ic_menu_gallery" />-->

<!--            <Button-->
<!--                android:id="@+id/addShoeImagesButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Button" />-->
<!--        </LinearLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/shoeSizeTextInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="199dp"
            android:background="@android:drawable/editbox_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeSizeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/shoeBrandTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/shoeNameTextInputLayout"
            android:background="@android:drawable/editbox_background">

            <EditText
                android:id="@+id/shoeSizeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/shoe_size_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeBrandTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/shoeDescriptionTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeTextInputLayout"
            android:background="@android:drawable/editbox_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeBrandInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_brand_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/saveShoeButton"
            app:layout_constraintTop_toBottomOf="@+id/shoeBrandTextInputLayout"
            tools:layout_editor_absoluteX="0dp"
            android:background="@android:drawable/editbox_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_description_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveShoeButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/saveShoeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>